k8s-manifests/ingress/ingress-rules.yml
# k8s-manifests/ingress/ingress-rules.yml (신규 생성)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"   # NGINX Ingress Controller 사용
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local        # DNS(혹은 /etc/hosts에 등록)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
